--- a/apps/web/templates/draft_index.html
+++ b/apps/web/templates/draft_index.html
@@ -1,19 +1,14 @@
-{% load i18n %}
-{% load static from staticfiles %}
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
   <title>Jizdoteka</title>
 
-  <link rel="icon" type="image/png" href="{% static 'web/jizdoteka.svg' %}" />
+  <link rel="icon" type="image/png" href="draft_jizdoteka.svg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link type="text/css" rel="stylesheet" href="{% static 'web/css/styles.css' %}">
+  <link rel="stylesheet" href="../static/web/css/styles.css">
 </head>
 <body>
   <div id="hlavicka"><h1>Jizdoteka.cz</h1></div>
-    {% block content %}
-    {% endblock %}
-  </body>
+</body>
 </html>
