--- a/apps/web/templates/web/journey_list.html
+++ b/apps/web/templates/web/journey_list.html
@@ -4,22 +4,32 @@
 {% load journey_tags %}
 
 {% block content %}
-<table>
-    <tr>
-        <th>(ID)</th>
-        <th>{{ _('From') }}</th>
-        <th>{{ _('to') }}</th>
-        <th>{{ _('date') }}</th>
-        <th>{{ _('driver') }}</th>
-    </tr>
-{% for journey in journey_list %}
-    <tr>
-        <td><a href="{% url 'journey_detail' journey.id %}">{{ journey.id }}</a></td>
-        <td>{{ journey.journeywaypoints_set|first_city}}</td>
-        <td>{{ journey.journeywaypoints_set|last_city }}</td>
-        <td>{{ journey.date }}</td>
-        <td>{{ journey.driver.first_name }} {{ journey.driver.last_name }}</td>
-    </tr>
-{% endfor %}
-</table>
+
+<div id="prechod"><h4>Vypsané spolujízdy</h4></div>
+<div id="stranka">
+
+  {% for journey in journey_list  %}
+  <div class="seznam_jizd">
+    <p class="nadpis_hod">
+      {{ _('Počátek:') }}<br />
+      {{ _('Cíl:') }}<br />
+      {{ _('Datum:') }}<br />
+      {{ _('Řidič:') }}<br />
+      {{ _('Cena:') }}
+    </p>
+  </div>
+  <div class="seznam_jizd">
+    <p class="text_hod">
+      {{ journey.journeywaypoints_set|first_city}}<br />
+      {{ journey.journeywaypoints_set|last_city }}<br />
+      {{ journey.date }}<br />
+      {{ journey.driver.first_name }} {{ journey.driver.last_name }}<br />
+      {{ journey.price }}
+    </p>
+  </div>
+  <a class="tlacitko" href="#">Přihlásit se na spolujízdu</a>
+
+  {% endfor %}
+
+</div>
 {% endblock %}
